# dozi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile.backend  README.md  docker-compose.yml  llm_models.yaml  pyproject.toml  pyrightconfig.json  renovate.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
agents/: Dockerfile  README.md  requirements.txt  stt_models.yaml  transcription_agent.py  whisper_agent.py
deploy/nginx/: api.conf
frontend/: .eslintrc.json  .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  verify-setup.sh
frontend/apps/web/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/apps/web/src/: App.tsx  main.tsx
frontend/apps/web/src/components/: AudioControls.tsx  InsightsPanel.tsx  ProtectedRoute.tsx  TranscriptView.tsx
frontend/apps/web/src/hooks/: useAgentLogs.ts  useAudioPublish.ts  useBattleCardGenerator.ts  useLiveKitRoom.ts  useTranscription.ts
frontend/apps/web/src/lib/: db.ts
frontend/apps/web/src/pages/: AuthCallbackPage.tsx  ConversationSummaryPage.tsx  HomePage.tsx  LoginPage.tsx  SessionPage.tsx  SettingsPage.tsx
frontend/apps/web/src/store/: authStore.ts  insightsStore.ts  (+1 more)
llm_service/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  models.yaml  pyproject.toml
llm_service/llm_service/: auth.py  main.py  schemas.py  settings.py
llm_service/llm_service/api/routes/: __init__.py  battlecards.py  livekit.py  models.py
llm_service/llm_service/prompts/: loader.py  models.py
llm_service/llm_service/services/: __init__.py  battlecard_service.py  livekit_service.py
llm_service/prompts/: call.yaml  interview.yaml
prompts/: meeting.yaml
src/dozi/: __init__.py  auth.py  db.py  main.py  settings.py
src/dozi/api/routes/: battlecards.py  conversations.py  livekit.py  preferences.py  transcriptions.py
src/dozi/models/: __init__.py  db_models.py  schemas.py
src/dozi/prompts/: __init__.py  loader.py
src/dozi/repositories/: __init__.py  battlecard_repository.py  conversation_repository.py  transcription_repository.py
src/dozi/services/: battlecard_service.py  livekit_service.py
supabase/: config.toml
supabase/migrations/: 20260216000000_initial_schema.sql
tests/: __init__.py
